--- a/5.5_RES.Rmd
+++ b/5.5_RES.Rmd
@@ -6,7 +6,7 @@ output:
     social: menu
     #source_code: embed
     navbar:
-      - { title: "Accueil", href: DRAJESBFC.html, align: right, icon: fa-home }
+      - { title: "Accueil", href: index.html, align: right, icon: fa-home }
     theme: simplex
 ---
 
