--- a/5.5_RES.Rmd
+++ b/5.5_RES.Rmd
@@ -68,7 +68,7 @@ La région Bourgogne-Franche-Comté compte **15 000** équipements en 2020.
 
 ## Row {.tabset .tabset-fade .tabset-pills data-height="800"}
 
-### Comparaisons régionales
+### Comparaisons
 
 ```{r}
 equip %>% 
@@ -98,10 +98,13 @@ equip %>%
            general_title = "Source : ",
            number = c("structurant : salles de sport collectifs, gymnases et salles polyvalentes \n",
                       "proximité : terrains en accès libre"), 
+           footnote_as_chunk = T) %>%
+  footnote(general_title = "Taux d'équipements :",
+           general = "pour 10 000 habitants",
            footnote_as_chunk = T)
 ```
 
-### Taux d'équipements pour 10 000 habitants et répartition
+### Taux d'équipements par habitants et répartition
 
 La Bourgogne-Franche-Comté est la région française la mieux dotée en équipement. Cela est lié avec une densité faible.
 
@@ -124,7 +127,7 @@ hchart( equip %>%
           stacking= 'normal' , 
           shadow=F,  showInLegend = T,  pointWidth =20) %>%
   hc_xAxis(title=list(text="Régions")) %>%
-  hc_yAxis(title=list(text="Taux d'équipements")) %>%
+  hc_yAxis(title=list(text="Taux d'équipements pour 10 000 habitants")) %>%
   hc_add_theme(thm) 
 ```
 
@@ -288,10 +291,13 @@ equip %>%
            general_title = "Source : ",
            number = c("structurant : salles de sport collectifs \n",
                       "proximité : terrains en accès libre"), 
+           footnote_as_chunk = T) %>%
+  footnote(general_title = "Taux d'équipements :",
+           general = "pour 10 000 habitants",
            footnote_as_chunk = T)
 ```
 
-### Taux d'équipements / 10 000 habitants
+### Taux d'équipements 
 
 La Haute-Saône est particulièrement bien dotée en équipement. La plupart des départements bien dotés sont peu denses.
 
@@ -343,7 +349,7 @@ hchart( equip %>%
                  showInLegend = F, pointWidth =3) %>%
     hc_legend(title=list(text=" France/BFC (Clic pour zoomer) " )) %>%
     hc_xAxis(title=list(text="Départements")) %>%
-    hc_yAxis(title=list(text="Taux d'équipements")) %>%
+    hc_yAxis(title=list(text="Taux d'équipements pour 10 000 habitants")) %>%
     hc_add_theme(thm) 
 ```
 
@@ -368,7 +374,7 @@ hchart( equip %>%
         stacking= 'normal' , 
         shadow=F,  showInLegend = T,  pointWidth =20) %>%
   hc_xAxis(title=list(text="Départements")) %>%
-  hc_yAxis(title=list(text="Taux d'équipements")) %>%
+  hc_yAxis(title=list(text="Taux d'équipements pour 10 000 habitants")) %>%
   hc_add_theme(thm) 
 ```
 
@@ -428,7 +434,7 @@ equip %>%
   footnote(general = " MEDES recensement des équipements sportifs 2020", 
            general_title = "Source : ",
            footnote_as_chunk = T) %>%
-  scroll_box(height="800px")
+  scroll_box(height="750px")
 
 ```
 
@@ -540,7 +546,7 @@ equip %>%
            number = c("structurant : salles de sport collectifs \n",
                       "proximité : terrains en accès libre"), 
            footnote_as_chunk = T) %>%
-  scroll_box(height="800px")
+  scroll_box(height="780px")
 ```
 
 ### Taux d'équipements pour 10 000 habitants
@@ -598,7 +604,7 @@ equip %>%
            number = c("structurant : salles de sport collectifs \n",
                       "proximité : terrains en accès libre"), 
            footnote_as_chunk = T) %>%
-  scroll_box(height="800px")
+  scroll_box(height="780px")
 ```
 
 ### Carte de équipements par EPCI {data-height="800"}
@@ -769,7 +775,7 @@ equip %>%
            number = c("structurant : salles de sport collectifs \n",
                       "proximité : terrains en accès libre"), 
            footnote_as_chunk = T) %>%
-  scroll_box(height="800px")
+  scroll_box(height="780px")
 ```
 
 ### Taux d'équipements pour 10 000 habitants
@@ -833,7 +839,7 @@ equip %>%
            number = c("structurant : salles de sport collectifs \n",
                       "proximité : terrains en accès libre"), 
            footnote_as_chunk = T) %>%
-  scroll_box(height="800px") 
+  scroll_box(height="780px") 
 ```
 
 ### Carte des équipements par bassin de vie {data-height="800"}
